k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-app
  labels:
    app: sentinel-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sentinel-app
  template:
    metadata:
      labels:
        app: sentinel-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-key
      containers:
        - name: sentinel
          image: 408834627625.dkr.ecr.ap-south-1.amazonaws.com/sentinel-canary:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
